--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
-.fit-picture {
-    width: 250px;
+
+p{
+    text-align: center;
+}
+h1{
+    text-align: center;
+}
+img {
+.center-image
+width: 300px;
+    height: 399px;
+    border: 1px solid #000;
+}
+.center-image {
+    text-align: center;
+    display: block;
+    margin: auto;
+    width: 25%;
+    height: 25%;
 }
